--- a/views/help.hbs
+++ b/views/help.hbs
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>From a static file</h1>
+  <h1>This is the help page</h1>
+  <p>{{title}}</p>
+  <p>{{name}}</p>
 </body>
 </html>
