working with partials

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <h1>{{title}}</h1>
+  <h1>{{>header}}</h1>
   <img src="/img/5A440325-37D1-4393-BBE3-43CF412BAA8A.jpeg" alt="me" />
-  <p>{{name}}</p>
+  {{>footer}}
 </body>
 
 </html>
