--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  <h1>This is the help page</h1>
+  {{>header}}
   <p>{{title}}</p>
   <p>{{name}}</p>
+  {{>footer}}
 </body>
+
 </html>
