--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>{{title}}</h1>
+  <h1>{{>header}}</h1>
   <p>{{name}}</p>
+  {{>footer}}
 </body>
 </html>
